translatingDivs/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {box-sizing: border-box}

body {
	/* height:100%; */
	height: 22731px;
	font-size:32px;
	/* height: 22731px;
	min-width: 1024px; */
	/* overflow: hidden;  */
}

/* An element with position: fixed; is positioned relative to the viewport, which means it always stays in the same place even if the page is scrolled. The top, right, bottom, and left properties are used to position the element. */
.outer-container {
	background-color:brown;
	min-width: 1024px;
	position: fixed;
	overflow: hidden;
	top:0;
	left:0;
	height:100%;
	width:100%;
	border:10px solid hotpink;
	
}

/* An element with position: absolute; is positioned relative to the nearest positioned ancestor (instead of positioned relative to the viewport, like fixed). */
.inner-container {
	background-color:purple;
	border:10px solid blue;
	position: absolute;
	overflow: hidden;
	top:0;
	left:0;
	height:100%;
	width:100%;
}

.views-container {
	background-color:white;
	position: absolute;
	left:0;
	top:0;
	height:100%;
	width:100%;
	border:5px solid red;
}

.view1 {
	/* height: 2360px; */
	height:100%;
	width:100%;
	border:10px solid gray;
	background-color:lightgray;
	position: absolute;
	z-index: 8;
	top:0;

}

.view2 {
	/* height:2175px; */
	height:100%;
	background-color:lightgreen;
	border:10px solid green;
	position: absolute;
	z-index: 7;
	top:0;
}

.view3 {
	height:2970px;
	background-color: lightseagreen;
	border:10px solid rgb(20, 110, 106);
}

.view4 {
	height:9410px;
	background-color: lightskyblue;
}

.view5 {
	height:3200px;
	background-color:lightcyan;
}

.view6 {
	height:1565px;
	background-color:lightcoral;
}

.view7 {
	height:675px;
	background-color:rgb(128, 223, 240);
}



.view1-header1 {
	/* width:1024px; */
	position: absolute;
	width:512px;
	height:160px;
	border:1px solid black;
	left:50%;
	top:50%;
	margin-left:-512px;
	margin-top:-80px;
}

.view1-header2 {
	/* width:1024px; */
	position: absolute;
	width:512px;
	height:160px;
	border:1px solid black;

}

.view1-header3 {
	/* width:1024px; */
	position: absolute;
	width:512px;
	height:160px;
	border:1px solid black;

}

